--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
-    "mongoose": "^8.16.3"
+    "marked": "^16.0.0",
+    "mongoose": "^8.16.3",
+    "sanitize-html": "^2.17.0"
   },
   "devDependencies": {
-    "@types/express": "^5.0.3"
+    "@types/express": "^5.0.3",
+    "@types/sanitize-html": "^2.16.0"
   }
 }
